--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" class="dark:bg-gray-900 dark:text-gray-100">
   <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="./public/logo.svg" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Libiverse Admin</title>
   </head>
